# creditcoin-cli

./: README.md  justfile
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/creditcoin-subxt/: Cargo.toml  creditcoin-metadata.scale
crates/creditcoin-subxt/src/: lib.rs
