[package]
name = "creditcoin-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
color-eyre = "0.6.2"
hex = "0.4.3"
parity-scale-codec = "3.4.0"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.96"
tap = "1.0.1"
creditcoin-subxt = { path = "../creditcoin-subxt" }
async-trait = "0.1.68"
cfg-if = "1.0.0"

[features]
default = []
old-substrate = ["creditcoin-subxt/old-substrate"]
