[package]
name = "creditcoin-subxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
parity-scale-codec = "3.2.1"
subxt = "0.25.0"
tap = "1.0.1"

[features]
default = []
old-substrate = []
