[package]
name = "creditcoin-subxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
color-eyre = "0.6.2"
parity-scale-codec = "3.4.0"
scale-decode = "0.5.0"
subxt = "0.28.0"
tap = "1.0.1"

[features]
default = []
old-substrate = []
